Updated display font-size to prevent overflow

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ html{
 
 .calc-text-area{
     height: 200px;
-    font-size: 85px;
+    font-size: 55px;
     font-weight: lighter;
     
     display: flex;
